hi in this version of vlc the colour goes multi-coloured. but not on every episode or film
the only way. I can get the colour back is to exit vlc and restart
it can you please fix this thank you.
\ messages - v1 ok, v2 colours problem - stop, play - v2 ok.log
\ crashdump - v2 ok, v1 vlc crash
\ messages - with disabled Use hardware YUV-RGB conversions - v2 ok, v1 black screen.log
1.) I enqueued both video samples in VLC playlist. VLC had default settings. I started to play the v1, then VLC played next v2 with the colours problem, so I stopped the playing v2 and started it again. Then v2 played fine.
2.) Then I changed order of videos in VLC playlist. v2 played fine, but VLC crashed with next v1.
3.) Then I disabled "Use hardware YUV->RGB conversions" in VLC preferences. v2 played fine, next v1 had frozen black screen.
D3D: the surface allocated for the pool needs to have the decoder sizein the case of direct rendering picture_CopyPixels is used to transfer fromthe decoder to the display and requires the same surface propertiesthe planes now have the same lines/pixels as the decoder, not just the visible onesfixes [#14531](https://code.videolan.org/videolan/vlc/-/issues/14531)Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
D3D: the surface allocated for the pool needs to have the decoder sizein the case of direct rendering picture_CopyPixels is used to transfer fromthe decoder to the display and requires the same surface propertiesthe planes now have the same lines/pixels as the decoder, not just the visible onesfixes [#14531](https://code.videolan.org/videolan/vlc/-/issues/14531)Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>