direct3d/directx: the surface allocated for the pool needs to have the decoder size

in the case of direct rendering picture_CopyPixels is used to transfer from
the decoder to the display and requires the same surface properties

the planes now have the same lines/pixels as the decoder, not just the visible ones

fixes #14531

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>